# PargonApplication

./: CMakeLists.txt  README.md
Include/Pargon/: Application.Win32.h  Application.h
Include/Pargon/Application/: Application.h  Clipboard.h  EventStream.h  Loader.h  Log.h
Source/Core/: Application.cpp  Clipboard.cpp  Loader.cpp  Log.cpp
Source/Win32/: Application.Win32.cpp  Clipboard.Win32.cpp  Log.Win32.cpp
